traefik/strip-prefix-middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: strip-prefix
  namespace: traefik
spec:
  stripPrefix:
    prefixes:
      - /dashboard
      - /api
